--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h1 class="display-5 fw-bold lh-1 mb-3">Move fast, stay aligned, and build better - together</h1>
             <p class="lead fw-bold">The #1 software development tool used by agile teams</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button id="getItFreeButton" type="button" class="btn btn-warning btn-lg px-4 me-md-2">Get it free</button>
+              <button id="getItFreeButton3" type="button" class="btn btn-warning btn-lg px-4 me-md-2">Get it free</button>
             </div>
           </div>
         </div>
